# pdf-png

./: Cargo.toml  example.env  prompt.txt
src/: ai.rs  main.rs  pdf_generation.rs
