[package]
name = "pdf-png"
version = "0.1.0"
edition = "2021"

[dependencies]
pdfium-render = "0.8.27"
image = "0.25.5"
dotenv = "0.15.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
